--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.22.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.22.1'
     implementation 'org.greenrobot:greendao:3.3.0'
+    implementation "androidx.cardview:cardview:1.0.0"
 }
 
 greendao {
